# SPTraining-VisionGroup

./: .gitignore  189.cpp  268.cpp  Binary_Search  CMakeLists.txt  Compile_Folly  LEETCODE 189  LEETCODE 268  LeetCode.189  LeetCode.268  LeetCode_189.cpp  LeetCode_268.cpp  Leetcode189.cpp  Leetcode268.cpp  Plan for this week8(TRAIN4).md  README.md  README_ROI.md  README_center.md  ROI.cpp  ROI.md  VideoCapture_threshold  _189.cpp  _268.cpp  bin_search.cpp  binaray_search.cpp  binary_search.cpp  blob.cpp  center.md  classifier.hpp  cvThreshold.cpp  erzhihua.cpp  ezh.cpp  first.cpp  folly  folly.txt  follysteps.txt  git_test.txt  gitignore  leet code 268.cpp  leet code189.cpp  (+21 more)
Assignment1-Yuxiang/: README.md
Assignment1-Yuxiang/APIBinarySearch/: main.cpp
Assignment1-Yuxiang/CompilingFolly/: CompilingFolly.md
Assignment1-Yuxiang/LeetCode189/: main.cpp
Assignment1-Yuxiang/LeetCode268/: main.cpp
Assignment1-Yuxiang/OpenCVVideo/: README.md  main.cpp
Assignment2-Yuxiang/: ROI.md  center.md  proportion_thresh_test.cpp
HW2_ZhengQiushi/: ROI.md  center.md  proportion_thresh_test.cpp
HW_1/: 189.cpp  268.cpp  binary_search.cpp  shellcode.txt  video.cpp
HW_2/: ROI.md  center.md  proportion_thresh_test.cpp
MSER/: MSER.cpp
Solutions/: Ganler's Solutions = Assigment One.md
assignment1/189/: Solution.h
assignment1/openvideo/: CMakeLists.txt
assignment1/openvideoassinment/: main.cpp
assignment2/: CMakeLists.txt  v01_Select_box.cpp
assignment2/Blob/: CMakeLists.txt  main.cpp
assignment2/Camera/: camer.m  camera_parameters.m  pixel.m  proj.m  rigbt.m
assignment2/ROI/: CMakeLists.txt  main.cpp
assignment2/bolbundROI/: CMakeLists.txt  v01_Select_box.cpp  v02_Find_center.cpp
assignment2/proportion/: CMakeCache.txt  main.cpp
assignment_liyamei/: asshell1.txt  asshell3.txt  asshell4.txt  openvideo.txt
assignment_liyamei/189/: 189.sln
assignment_liyamei/189/189/: 189.cpp  189.vcxproj  189.vcxproj.filters  ReadMe.txt  Solution.cpp  stdafx.cpp
assignment_liyamei/189/Debug/: 189.ilk
assignment_liyamei/268/: 268.sln  Solution.cpp  Solution.h
assignment_liyamei/268/268/: 268.cpp  268.vcxproj  268.vcxproj.filters  ReadMe.txt  stdafx.cpp
assignment_liyamei/268/Debug/: 268.ilk
assignment_liyamei/binary_search/: binary_search.cpp
assignment_liyamei/follyassinment/googletest-release-1.8.0/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
assignments_20190929_hanxuyuan/: FacebookFolly_build_shell.txt  missingNumber.cpp  rotate.cpp
assignments_20190929_hanxuyuan/OpenCV_readVideo/: CMakeLists.txt  OpenCV_readVideo.cpp
superpower19classifier-zjx/: CMakeLists.txt  README.md  classifier_zjx.hpp  test.cpp
task 1/: API.cpp  C++.cpp  shell code.txt  video.cpp
train-1/: Binary_search.cpp  Folly  HW1  HW2.cpp  HW3-189.cpp  HW3-268.cpp  HW4.cpp  Missing.cpp  README.md  Rotation.cpp  threshold.cpp
train-1/ljg-hm/: CMakeLists.txt  README.md  main.cpp  qsort.hpp
train-1/ljy-hm/: CMakeLists.txt  README.md  main.cpp  qsort.hpp
train-1/lzs-hm/: README.md  main.cpp  qsort.hpp
train-1/wjw-hm/openCV/: CMakeLists.txt
train-1/wjw-hm1/: README.md
train-1/wjw-hm1/openCV/: video.cpp
train-1/zhongzebin-hm/binary/: CMakeLists.txt  main.cpp
train-1/zhongzebin-hm/binary-search/: binarySearch.cpp
train-1/zhongzebin-hm/install-folly/: install_folly.txt
train-1/zhongzebin-hm/missing-digit/: missingNumber.cpp
train-1/zhongzebin-hm/rotated-array/: rotate.cpp
train-2/: Array.hpp  DYN_ARRAY_2D.hpp  DynArray2D.cpp  README.md  array2d.hpp  classifier.cpp  main.cpp  newtest.cpp  proportion_thresh_test.cpp  train-2.md  学习心得.md
train-2/ljy-hm/: CMakeLists.txt  README.md  classifier.hpp  dynamic_template_array2D .hpp  main.cpp
train-2/wjw-hm2/ROI/: CMakeLists.txt  ROI.md  roi.cpp
train-2/wjw-hm2/center/: center.md
train-2/wjw-hm2/proportion_thresh_test/: CMakeLists.txt  proportion_thresh_test.cpp
train-2/zhongzebin-hm/ROI/: CMakeLists.txt  main.cpp  理解.txt
train-2/zhongzebin-hm/camera_calibration/: CMakeLists.txt  main.cpp
train-2/zhongzebin-hm/find_center/: CMakeLists.txt  main.cpp  理解.txt
(+76 files in other folders)
