cmake_minimum_required(VERSION 3.5)
project(binary)
find_package(OpenCV 3 REQUIRED)
set(CMAKE_CXX_STANDARD 11)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
if(CMAKE_VERSION VERSION_LESS "2.8.11")
    include_directories(${OpenCV_INCLUDE_DIRS})
endif()
add_executable(binary main.cpp)
target_link_libraries(binary LINK_PRIVATE ${OpenCV_LIBS})
